--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=CRM
 
 # (Data Source)
-server.port=8080
+#server.port=8080
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/CRM
 spring.datasource.username=postgres
@@ -25,3 +25,13 @@ spring.mvc.hiddenmethod.filter.enabled=true
 # JWT Configuration
 jwt.expiration.time=1
 jwt.secret.key=iojgldfkg5uw405948MYKOLAfjlskjglj509483-05riupolgkjvnflkdja3-908u0
+
+#HTTPS
+server.port=8443
+server.ssl.enabled=true
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=777441
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=localhost
+
+server.http.port=8080
